# captura

./: .commitlintrc.yaml  .dockerignore  .gitignore  README.md  README.rst  RUBRIC.md  TODO.rst  USE.md  builder.test.yaml  builder.yaml  logging.test.yaml  logging.yaml  plugin.py  plugins.yaml  pyproject.toml  recurse.sql  setup.cfg  temp.py
.github/workflows/: commit_checks.yaml  package.yaml  pr_checks.yaml  publish.yaml  version.yaml
docker/: compose.base.yaml  compose.ci.yaml  compose.yaml  docker-compose.yaml  docker-entrypoint.sh  docker.sh  dockerfile  logging.yaml
extensions/: text.py
scripts/: env.sh  gunicorn_coverage.py  register.js  test.sh  validate_ref_name.py
src/app/: __init__.py  __main__.py  auth.py  config.py  depends.py  err.py  fields.py  hooks.py  logger.py  models.py  schemas.py  util.py  views.py
src/app/controllers/: '  access.py  base.py  create.py  delete.py  read.py
src/app/static/: 404.html  err.css
src/app/views/: __init__.py  access.py  args.py  assignments.py  auth.py  base.py  collections.py  create.py  delete.py  documents.py  events.py  frontend.py  grants.py  users.py
src/app/views/templates/: base.j2  register.j2
src/browse/: __init__.py  __main__.py
src/captura/: __init__.py  __main__.py  auth.py  config.py  depends.py  err.py  fields.py  hooks.py  logger.py  models.py  schemas.py  util.py
src/captura/controllers/: access.py  base.py  create.py  delete.py  read.py
src/captura/static/: nord.css
src/captura/views/: __init__.py  args.py  assignments.py  auth.py  base.py  collections.py  documents.py  events.py  grants.py  users.py
src/captura/views/templates/: base.j2  demo.j2  index.j2  profile.j2  register.j2
src/client/: __init__.py  __main__.py  apply.py  base.py  config.py  flags.py  handlers.py  hooks.py  requests.py  util.py
src/client/requests/: __init__.py  assignments.py  base.py  collections.py  documents.py  events.py  grants.py  tokens.py  users.py
src/dummy/: __init__.py  __main__.py  config.py  mk.py  reports.py
src/legere/: __init__.py  __main__.py  apply.py  config.py  flags.py  handlers.py  hooks.py
src/legere/requests/: __init__.py  assignments.py  base.py  collections.py  documents.py  events.py  grants.py  tokens.py  users.py
src/plugin/: __init__.py  __main__.py  config.py
src/simulatus/: __init__.py  __main__.py  config.py  mk.py  reports.py
src/simulatus/assets/: assignment.yaml  collection.yaml  document.yaml  grant.yaml  user.yaml
tests/: check.py  config.py  conftest.py  dummies.json  dummy.py  flakey.py  logging.yaml  mk.py  reports.py  test_auth.py  test_client.py  test_database.py  test_dummy.py  test_hash.py  test_integration.py  test_models.py  test_util.py  test_views.py
tests/assets/: _assocs_user_documents.yaml  act.yaml  assignment.yaml  collection.yaml  collections.yaml  document.yaml  document_histories.yaml  documents.yaml  edit.yaml  edits.yaml  event.yaml  grant.yaml  test-user-create.yaml  user.yaml  users.yaml
tests/junk/: test_assignments.py  test_collections.py  test_grants.py  test_user.py  test_visibility.py
tests/test_client/: test_config.py
tests/test_controllers/: test_access.py  test_assoc.py  test_base.py  test_delete.py  test_delete_assoc.py  test_upsert.py  util.py
tests/test_views/: diag.sql  test_assignments.py  test_assignments_collections_unit.py  test_assignments_documents_unit.py  test_collections.py  test_collections_unit.py  test_documents_unit.py  test_grants.py  test_grants_documents_unit.py  test_grants_unit.py  test_grants_users_unit.py  test_user.py  test_users_unit.py  test_visibility.py  util.py
