
# vi: set ft=toml:
# Read `this <https://snarky.ca/what-the-heck-is-pyproject-toml/>`.

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[black]

[project]
authors = [{name = "Adrian Cederberg", email = "adrn.cederberg123@gmail.com"}, ]
name = "captura"
version = "0.0.0"
description = "An api to serve markdown and reStructured text as json or rendered HTML."
readme = "README.rst"
keywords = ["api", "rst", "markdown"]
#liscense = "Lisense :: OSI Approved :: MIT License"

# The following were take directly from pyproject.toml in pydantic because I am lazy and the classifiers
# are applicable here.
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Topic :: Internet',
]
dependencies = [
  "uvicorn",
  "fastapi",
	"pydantic>=2",
  "pydantic-settings>=2",
  "sqlalchemy>=2",
  "yaml-settings-pydantic>=2",
  "PyMySQL",
  "PyMySQL[rsa]",
  "typer",
  "rich",
  "pyjwt[crypto]",
	"httpx",
  "websockets",
]

requires-python = ">=3.7" # because https://github.com/pydantic/pydantic/blob/main/pyproject.toml


[project.optional-dependencies]
ci = [
  "build",
  "twine",
]
dev = [
	"black",
	"flake8",
	"mypy",
	"isort",
  "jedi-language-server"
]
test = [
	"pytest",
  "pytest-asyncio",
]


[project.scripts]
app = "app.__main__:main"
client = "client.__main__:main"


[tool.black]


[tool.flake8]
# Read the [enumeration of available properties](https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-color).
indent_size = 4
max_line_length = 120
hang_closing = true
color = "always"
filename = "**/*.py"
ignore = [
	"E133", # Stupid closing backet requires indentation
	"E701", # Multiple statements on one line.
	"E702", # Multiple statements on one line.
	"E703", # Multiple statements on one line.
	"E704", # Multiple statements on one line.
]


[tool.isort]


[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]


# https://docs.pydantic.dev/latest/integrations/mypy/#configuring-the-plugin
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true


[tool.bumpver]
current_version = "0.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/app/__init__.py" = ["{version}"]

[tool.setuptools_scm]


[tool.setuptools.package-data]
"captura" = ["py.typed"]
