[metadata]
authors =
	Adrian Cederberg
name = artcle-server
version = 0.0.0
description = An api to server markdown and reStructured text as json or rendered HTML.
long_description = file: README.rst
keywords = api, markdown, rst, reStructured, text
liscense = LICENSE



[options.packages.find]
where = ["src"]
include = ["app"]
